# Prospect-backend

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: cb31a1753293_initial_schema.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  dashboard.py  leads.py  search_jobs.py  settings.py  users.py
app/cli/: create_admin.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  enums.py  lead.py  lead_event.py  search_job.py  setting.py  site_analysis.py  user.py
app/schemas/: dashboard.py  lead.py  lead_event.py  search_job.py  setting.py  user.py
app/services/: dashboard.py  leads.py  scoring.py  scraper.py  search_jobs.py  settings.py  site_analysis.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_crm.py  test_dashboard.py  test_leads.py  test_models.py  test_scoring.py  test_search_jobs.py  test_site_analysis.py  test_users.py
tests/fixtures/: google_maps_result.html
