[project]
name = "prospect-backend"
version = "0.1.0"
description = "Backend for Google Maps lead prospecting"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt<4.0.0",
  "email-validator>=2.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "playwright>=1.45.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
